<resources>
    <!-- Activity name -->
    <string name="app_name">PenCollab</string>
    <string name="view_profile">View Profile</string>
    <string name="draw">Draw</string>
    <string name="drawing">Drawing</string>
    <string name="join">Join</string>
    <string name="profile">Profile</string>
    <string name="discover">Discover</string>
    <string name="gallery">Gallery:</string>
    <string name="shared_drawing">Shared drawing:</string>
    <string name="public_drawing">Public drawing:</string>
    <string name="history">History</string>
    <string name="history_list">History list:</string>

    <!--  Premium page  -->
    <string name="get_premium">Get Premium !</string>
    <string name="premium">Premium</string>
    <string name="not_premium">Not premium</string>
    <string name="advantage">Advantage:</string>
    <string name="advantage_list">- History of the design stages \n- Access to more tools</string>
    <string name="pricing">Pricing:</string>
    <string name="price">Free !</string>
    <string name="buy">Buy Now !</string>
    <string name="ispremium">You are already Premium, thank you !</string>
    <string name="nowpremium">You are now premium, Welcome !</string>

    <string name="login">Log In</string>
    <string name="username">Username</string>
    <string name="user">User</string>
    <string name="unregistered">unregistered</string>
    <string name="registered">registered</string>
    <string name="enter_username">Enter your username</string>
    <string name="email">Email</string>
    <string name="enter_email">Enter your mail</string>
    <string name="password">Password</string>
    <string name="enter_password">Enter your password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_out">Log Out</string>
    <string name="brush">Brush</string>
    <string name="colors">Colors</string>
    <string name="eraser">Eraser</string>
    <string name="share">Share</string>
    <string name="save">Save</string>
    <string name="artwork">Artwork:</string>
    <string name="search">Search</string>
    <string name="title">Title</string>
    <string name="delete">Delete</string>
    <string name="unknown">Unknown</string>
    <string name="size">Size</string>
    <string name="by">By:</string>
    <string name="createdOn">Created on:</string>
    <string name="returnT">Return</string>
    <string name="empty" translatable="false" />

    <!-- AlertDialogue -->
    <string name="select">Select</string>
    <string name="cancel">Cancel</string>
    <string name="delete_ask">Do you want to delete this drawing ?</string>
    <string name="color_ask">Select a color</string>
    <string name="empty_fields">One or more fields are empty</string>
    <string name="user_already_exist">This User already exist</string>
    <string name="user_doesnt_exist">This user doesn\'t exist</string>
    <string name="wrong_username">"Error: wrong username"</string>
    <string name="wrong_password">"Error: wrong password"</string>
    <string name="your_password">Your password is:</string>
    <string name="send">Send</string>
    <string name="shared_with">Shared with:</string>
    <string name="enter_other_username">Please enter an username</string>
    <string name="Visibility">Visibility</string>
    <string name="history_updated">Drawing successfully updated !</string>

    <!--  Icon  -->
    <string name="palette_icon" translatable="false">🎨</string>
    <string name="pen_icon" translatable="false">✏️</string>
    <string name="picture_icon" translatable="false">🖼️</string>
    <string name="brush_icon" translatable="false">🖌️</string>
    <string name="rule_icon" translatable="false">📏</string>
    <string name="loop_icon" translatable="false">🔎</string>

    <!-- Export -->
    <string name="exporting">Exporting image</string>
    <string name="exportTrue">Image exported successfully</string>
    <string name="noDrawing">No Drawing found</string>

</resources>