<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal|top"
    android:orientation="vertical"
    android:paddingBottom="12dp"
    android:paddingTop="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:gravity="start|center_vertical"
        android:orientation="horizontal"
        android:paddingBottom="11.5dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:paddingTop="11.5dp">

        <ImageView
            android:id="@+id/back_arrow"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:scaleType="centerInside"
            android:src="@drawable/img_arrow"
            android:contentDescription="@string/empty" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="25dp"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:gravity="start|center_vertical"
            android:includeFontPadding="false"
            android:maxLines="1"
            android:singleLine="true"
            android:text="@string/premium"
            android:textSize="20sp" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:layout_marginTop="12dp"
                android:gravity="start|center_vertical"
                android:includeFontPadding="false"
                android:maxLines="1"
                android:singleLine="true"
                android:text="@string/advantage"
                android:textSize="14sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:layout_marginTop="4dp"
                android:background="@drawable/container_frame"
                android:clipToPadding="false"
                android:gravity="start|center_vertical"
                android:orientation="horizontal"
                android:paddingBottom="8dp"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:paddingTop="8dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="start|center_vertical"
                    android:textSize="14sp"
                    android:autofillHints=""
                    android:text="@string/advantage_list"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="12dp"
                    android:layout_marginTop="12dp"
                    android:gravity="start|center_vertical"
                    android:includeFontPadding="false"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:text="@string/pricing"
                    android:textSize="14sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="12dp"
                    android:layout_marginTop="4dp"
                    android:background="@drawable/container_frame"
                    android:clipToPadding="false"
                    android:gravity="start|center_vertical"
                    android:orientation="horizontal"
                    android:paddingBottom="8dp"
                    android:paddingLeft="12dp"
                    android:paddingRight="12dp"
                    android:paddingTop="8dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="start|center_vertical"
                        android:textSize="14sp"
                        android:autofillHints=""
                        android:text="@string/price"
                        />

                </LinearLayout>
            </LinearLayout>

            <Button
                android:id="@+id/button_buy"
                android:layout_width="329dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:background="@drawable/button_premium"
                android:text="@string/buy"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingLeft="12dp"
                android:paddingTop="10dp"
                android:paddingRight="12dp"
                android:paddingBottom="10dp"
                android:textColor="@color/button"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>

