<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal|top"
    android:orientation="vertical"
    android:paddingBottom="12dp"
    android:paddingTop="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:gravity="start|center_vertical"
        android:orientation="horizontal"
        android:paddingBottom="11.5dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:paddingTop="11.5dp">

        <ImageView
            android:id="@+id/back_arrow"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:scaleType="centerInside"
            android:src="@drawable/img_arrow"
            android:contentDescription="@string/empty" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="25dp"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:gravity="start|center_vertical"
            android:includeFontPadding="false"
            android:maxLines="1"
            android:singleLine="true"
            android:text="@string/login"
            android:textSize="20sp" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:layout_marginTop="12dp"
                android:gravity="start|center_vertical"
                android:includeFontPadding="false"
                android:maxLines="1"
                android:singleLine="true"
                android:text="@string/username"
                android:textSize="14sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:layout_marginTop="4dp"
                android:background="@drawable/container_frame"
                android:clipToPadding="false"
                android:gravity="start|center_vertical"
                android:orientation="horizontal"
                android:paddingBottom="8dp"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:paddingTop="8dp">

                <EditText
                    android:id="@+id/editText_enter_username"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="start|center_vertical"
                    android:hint="@string/enter_username"
                    android:textSize="14sp"
                    android:autofillHints=""
                    android:inputType="textCapWords" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:layout_marginTop="12dp"
                android:gravity="start|center_vertical"
                android:text="@string/email"
                android:textSize="14sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:layout_marginTop="4dp"
                android:background="@drawable/container_frame"
                android:clipToPadding="false"
                android:gravity="start|center_vertical"
                android:orientation="horizontal"
                android:paddingBottom="8dp"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:paddingTop="8dp">

                <EditText
                    android:id="@+id/editText_enter_email"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ellipsize="end"
                    android:gravity="start|center_vertical"
                    android:includeFontPadding="false"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:hint="@string/enter_email"
                    android:textSize="14sp"
                    android:autofillHints=""
                    android:inputType="textEmailAddress" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:layout_marginTop="12dp"
                android:gravity="start|center_vertical"
                android:text="@string/password"
                android:textSize="14sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:layout_marginTop="4dp"
                android:background="@drawable/container_frame"
                android:clipToPadding="false"
                android:gravity="start|center_vertical"
                android:orientation="horizontal"
                android:paddingBottom="8dp"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:paddingTop="8dp">

                <EditText
                    android:id="@+id/editText_enter_password"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ellipsize="end"
                    android:gravity="start|center_vertical"
                    android:includeFontPadding="false"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:hint="@string/enter_password"
                    android:textSize="14sp"
                    android:autofillHints=""
                    android:inputType="textPassword" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/container_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:gravity="start|top"
                android:orientation="horizontal"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:paddingTop="1dp"
                android:layout_marginBottom="12dp">


                <Button
                    android:id="@+id/button_forgot_password"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/white_button_with_black_border"
                    android:text="@string/forgot_password"
                    android:gravity="center"
                    android:paddingBottom="10dp"
                    android:paddingLeft="12dp"
                    android:paddingRight="12dp"
                    android:paddingTop="10dp"
                    android:textColor="@color/button_border"
                    style="?android:attr/buttonBarButtonStyle" />

                <Button
                    android:id="@+id/button_login"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_premium"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:paddingBottom="10dp"
                    android:paddingLeft="12dp"
                    android:paddingRight="12dp"
                    android:paddingTop="10dp"
                    android:text="@string/login"
                    android:textColor="@color/button"
                    style="?android:attr/buttonBarButtonStyle" />

            </LinearLayout>


            <Button
                android:id="@+id/button_sign_up"
                android:layout_width="329dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:background="@drawable/button_premium"
                android:text="@string/sign_up"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingLeft="12dp"
                android:paddingTop="10dp"
                android:paddingRight="12dp"
                android:paddingBottom="10dp"
                android:textColor="@color/button"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>

