<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal|top"
    android:orientation="vertical"
    android:paddingBottom="12dp"
    android:paddingTop="20dp" >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:gravity="start|center_vertical"
        android:orientation="horizontal"
        android:paddingBottom="11.5dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:paddingTop="11.5dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="25dp"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:gravity="start|center_vertical"
            android:includeFontPadding="false"
            android:maxLines="1"
            android:singleLine="true"
            android:text="@string/app_name"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:gravity="start|center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="12dp"
        android:paddingRight="12dp">

        <ImageView
            android:id="@+id/img_avatar"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:scaleType="centerInside"
            android:background="@drawable/container_shadow_icon"
            android:contentDescription="@string/empty" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_weight="1"
            android:gravity="start|top"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_user_name"
                android:layout_width="match_parent"
                android:layout_height="24dp"
                android:ellipsize="end"
                android:gravity="start|center_vertical"
                android:maxLines="1"
                android:singleLine="true"
                android:text="Patrick Dessine"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txt_user_status"
                android:layout_width="match_parent"
                android:layout_height="16dp"
                android:ellipsize="end"
                android:gravity="start|center_vertical"
                android:maxLines="1"
                android:singleLine="true"
                android:text="Premium"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/container_view_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:background="@drawable/container_button"
            android:clipToPadding="false"
            android:gravity="start|center_vertical"
            android:orientation="horizontal"
            android:paddingBottom="3dp"
            android:paddingStart="8dp"
            android:paddingEnd="4dp"
            android:paddingTop="3dp">

            <TextView
                android:id="@+id/profile_button"
                android:layout_width="wrap_content"
                android:layout_height="16dp"
                android:gravity="start|center_vertical"
                android:maxLines="1"
                android:singleLine="true"
                android:text="@string/view_profile"
                android:textSize="12sp" />

            <ImageView
                android:layout_width="12dp"
                android:layout_height="12dp"
                android:layout_marginEnd="2dp"
                android:scaleType="centerInside"
                android:src="@drawable/img_back_arrow"
                android:contentDescription="@string/empty" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:gravity="start|top"
        android:orientation="horizontal"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:baselineAligned="false">

        <LinearLayout
            android:id="@+id/container_draw"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/container_frame"
            android:gravity="center_horizontal|top"
            android:orientation="vertical"
            android:paddingBottom="4dp"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:paddingTop="4dp">

            <FrameLayout
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@drawable/container_shadow_icon">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_gravity="center"
                    android:ellipsize="end"
                    android:gravity="center"
                    android:includeFontPadding="false"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:text="@string/pen_icon"
                    android:textSize="30sp" />
            </FrameLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="28dp"
                android:layout_marginTop="4dp"
                android:ellipsize="end"
                android:gravity="center"
                android:maxLines="2"
                android:text="@string/draw"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/container_join"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:background="@drawable/container_frame"
            android:gravity="center_horizontal|top"
            android:orientation="vertical"
            android:paddingLeft="4dp"
            android:paddingTop="4dp"
            android:paddingRight="4dp"
            android:paddingBottom="4dp">

            <FrameLayout
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@drawable/container_shadow_icon">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:ellipsize="end"
                    android:gravity="center"
                    android:includeFontPadding="false"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:text="@string/picture_icon"
                    android:textSize="30sp" />
            </FrameLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="28dp"
                android:layout_marginTop="4dp"
                android:ellipsize="end"
                android:gravity="center"
                android:maxLines="2"
                android:text="@string/join"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/container_discover"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/container_frame"
        android:gravity="center_horizontal|top"
        android:orientation="vertical"
        android:paddingBottom="4dp"
        android:paddingLeft="4dp"
        android:paddingRight="4dp"
        android:paddingTop="4dp">

        <FrameLayout
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/container_shadow_icon">

            <TextView
                android:id="@+id/icon_drawable"
                android:layout_width="48dp"
                android:layout_height="57dp"
                android:layout_marginTop="-4.5dp"
                android:layout_marginBottom="-4.5dp"
                android:layout_gravity="center"
                android:ellipsize="end"
                android:gravity="center"
                android:includeFontPadding="false"
                android:maxLines="2"
                android:text="@string/palette_icon"
                android:textSize="30sp" />
        </FrameLayout>

        <TextView
            android:id="@+id/text_draw"
            android:layout_width="match_parent"
            android:layout_height="28dp"
            android:layout_marginTop="4dp"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="2"
            android:text="@string/discover"
            android:textSize="12sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/text_gallery"
        android:layout_width="match_parent"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_height="25dp"
        android:layout_marginTop="7.5dp"
        android:layout_marginBottom="-4.5dp"
        android:gravity="start|center_vertical"
        android:maxLines="1"
        android:singleLine="true"
        android:text="@string/gallery"
        android:textSize="20sp" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/container_gallery"
        android:layout_width="match_parent"
        android:layout_height="236dp"
        android:layout_marginTop="12dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp" />


    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical" />


    <Button
        android:id="@+id/premium_button"
        android:layout_width="333dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:background="@drawable/button_premium"
        android:gravity="center"
        android:text="@string/get_premium"
        android:textColor="@color/button"/>
    

</LinearLayout>