<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal|top"
    android:orientation="vertical"
    android:paddingBottom="12dp"
    android:paddingTop="20dp">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:gravity="start|center_vertical"
        android:orientation="horizontal"
        android:paddingBottom="11.5dp"
        android:paddingStart="16dp"
        android:paddingEnd="8dp"
        android:paddingTop="11.5dp">

        <ImageView
            android:id="@+id/back_arrow"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:scaleType="centerInside"
            android:src="@drawable/img_arrow"
            android:contentDescription="@string/empty" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="25dp"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:gravity="start|center_vertical"
            android:maxLines="1"
            android:text="@string/discover"
            android:textSize="20sp"
            tools:ignore="TextSizeCheck" />
    </LinearLayout>

    <EditText
        android:id="@+id/search_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:hint="@string/search"
        android:autofillHints="name"
        android:inputType="textCapWords"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginTop="28dp"
        android:gravity="start|center_vertical"
        android:maxLines="1"
        android:text="Featured Collaborations"
        android:textSize="18sp" />


    <ListView
        android:id="@+id/list_discover"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="12dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp" />


</LinearLayout>
